added adjust_workforce method & flake8 dependency

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ abm = {file = ".", editable = true}
 [dev-packages]
 ipykernel = "*"
 pytest = "*"
+flake8 = "*"
 
 [requires]
 python_version = "3.12"
